--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.0.0",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^4.12.0",
+    "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.15.9",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
