--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "googleapis": "^118.0.0",
     "next": "13.2.4",
     "next-auth": "^4.22.0",
     "nookies": "^2.5.2",
